10.0.24.alpha.2 - 17th December 2022

10.0.24.alpha.1 - 17th December 2022
- For 'Mute game sounds' ('System'), you can now make ottuks quieter.

10.0.23 - 16th December 2022
- For 'Automate quests' ('Automation'), quests which require Blizzard account-bound items will no longer be turned-in automatically.  The waygate quests from Thaelin Darkanvil will no longer be selected automatically.

10.0.22 - 11th December 2022
- For 'Remove transforms' ('System'), the 'Professions' setting now applies to all professions except fishing.

10.0.21 - 11th December 2022
- For 'Mute game sounds' ('System'), 'Dragonriding' now includes Highland Drake roars.
- Fixed an issue with 'Recent chat window' ('Chat') which caused some chat links to interfere with dragging and highlighting text.

10.0.20 - 10th December 2022
- Updated code for 'Remove transforms' ('System') and 'Show cooldowns' ('Interface').

10.0.19 - 9th December 2022
- For 'Sell junk automatically' ('Automation'), whitelisted a few grey quest items that the game thinks can be sold but actually they cannot be sold.
- Updated code for 'Remove transforms' ('System') and fixed an issue with the 'Professions' setting.
- Updated code for 'Show cooldowns' ('Interface').

10.0.18 - 6th December 2022
- For 'Mute game sounds' ('System'), 'Dragonriding' now includes Windborne Velocidrake roars.
- For 'Sell junk automatically' ('Automation'), Leatrix Plus will no longer attempt to sell Carefully Rolled Message (junk item).
- For 'Remove transforms' ('System'), the 'Professions' setting no longer applies to fishing.
- For 'Faster auto loot' ('System'), you can now specify the looting delay.  It's recommended to leave this setting at the default value of 0.3 but you can try lower values if you wish.

10.0.17 - 3rd December 2022
- For 'Mute game sounds' ('System'), you can now make dragonriding quieter.  This includes summon, roar and landing stomp sounds.